Correcting serverless.yml createNote handler. Importing axios to make tests. Testing post route for createNote function.

--- a/serverless/serverless.yml
+++ b/serverless/serverless.yml
@@ -64,7 +64,7 @@ functions:
           method: get
           cors: true
   createNote:
-    handler: handler.hello
+    handler: handler.createNote
     events:
       - http:
           path: /notes/createNote
