--- a/serverless/serverless.yml
+++ b/serverless/serverless.yml
@@ -1,27 +1,26 @@
-# Welcome to Serverless!
-#
-# This file is the main config file for your service.
-# It's very minimal at this point and uses default values.
-# You can always add more config options for more control.
-# We've included some commented out config examples here.
-# Just uncomment any of them to get that config option.
-#
-# For full config options, check the docs:
-#    docs.serverless.com
-#
-# Happy Coding!
 
-service: ToDoList # NOTE: update this with your service name
-
-# You can pin your service to only deploy with a specific Serverless version
-# Check out our docs for more details
-# frameworkVersion: "=X.X.X"
+service: ToDoList
 
 provider:
   name: aws
   runtime: nodejs8.10
   region: us-west-1
+  environment:
+    NOTES_TABLE: ${self:custom.tableName}
+    AWS_DEPLOY_REGION: ${self:provider.region}
+  iamRoleStatements:
+    - Effect: Allow
+      Action:
+        - dynamodb:Query
+        - dynamodb:Scan
+        - dynamodb:GetItem
+        - dynamodb:PutItem
+        - dynamodb:UpdateItem
+        - dynamodb:DeleteItem
+      Resource:
+        - { "Fn::GetAtt": ["TaskTable", "Arn" ] }
 
+        
 # you can overwrite defaults here
 #  stage: dev
 #  region: us-east-1
@@ -56,85 +55,50 @@ provider:
 #    - exclude-me-dir/**
 
 functions:
-  hello:
-    handler: handler.hello
+  createTask:
+    handler: handler.createTask
     events:
       - http:
-          path: /hello
-          method: get
-          cors: true
-  createNote:
-    handler: handler.createNote
-    events:
-      - http:
-          path: /notes/createNote
+          path: /tasks/createTask
           method: post
           cors: true
-  getAllNotes:
-    handler: handler.getAllNotes
+  getAllTasks:
+    handler: handler.getAllTasks
     events:
       - http:
-          path: /notes/all
+          path: /tasks/all
           method: get
           cors: true
-  updateNote:
-    handler: handler.updateNote
+  updateTask:
+    handler: handler.updateTask
     events:
       - http:
-          path: /notes/{noteId}
+          path: /tasks/{taskId}
           method: patch
           cors: true
-  deleteNote:
-    handler: handler.deleteNote
+  deleteTask:
+    handler: handler.deleteTask
     events:
       - http:
-          path: /notes/{noteId}
+          path: /tasks/{taskId}
           method: delete
           cors: true
 
 
-          
-#    The following are a few example events you can configure
-#    NOTE: Please make sure to change your handler code to work with those events
-#    Check the event documentation for details
-#    events:
-#      - http:
-#          path: users/create
-#          method: get
-#      - s3: ${env:BUCKET}
-#      - schedule: rate(10 minutes)
-#      - sns: greeter-topic
-#      - stream: arn:aws:dynamodb:region:XXXXXX:table/foo/stream/1970-01-01T00:00:00.000
-#      - alexaSkill: amzn1.ask.skill.xx-xx-xx-xx
-#      - alexaSmartHome: amzn1.ask.skill.xx-xx-xx-xx
-#      - iot:
-#          sql: "SELECT * FROM 'some_topic'"
-#      - cloudwatchEvent:
-#          event:
-#            source:
-#              - "aws.ec2"
-#            detail-type:
-#              - "EC2 Instance State-change Notification"
-#            detail:
-#              state:
-#                - pending
-#      - cloudwatchLog: '/aws/lambda/hello'
-#      - cognitoUserPool:
-#          pool: MyUserPool
-#          trigger: PreSignUp
 
-#    Define function environment variables here
-#    environment:
-#      variable2: value2
+custom: 
+  # Selects stage, else falls back onto self's provider stage.
+  stage: ${opt:stage, self:provider.stage}
+  tableName: ${self:custom.stage}-Task
+  # Setting DynamoDB throughput for prod and default for all other non-prod stages.
+  tableThroughputs:
+    prod: 5
+    default: 1
+  tableThroughput: ${self:custom.tableThroughputs.${self:custom.stage}, self:custom.tableThroughputs.default}
 
-# you can add CloudFormation resource templates here
-#resources:
-#  Resources:
-#    NewResource:
-#      Type: AWS::S3::Bucket
-#      Properties:
-#        BucketName: my-new-bucket
-#  Outputs:
-#     NewOutput:
-#       Description: "Description for the output"
-#       Value: "Some output value"
+
+# Create our resources with separate templates
+resources:
+  # DynamoDB
+  - ${file(resources/dynamodb-table.yml)}
+
