Adding getTasksByStatus as a query parameter for flexibility to retreive completed tasks into handler.js and serverless.yml

--- a/serverless/serverless.yml
+++ b/serverless/serverless.yml
@@ -35,6 +35,18 @@ functions:
           path: /tasks/all
           method: get
           cors: true
+  getTasksByStatus:
+    handler: handler.getTasksByStatus
+    events:
+      - http:
+          path: /tasks/filter
+          method: get
+          request:
+            template:
+              application/json: >
+                {
+                  "status":"$input.params('status')"
+                }
   updateTask:
     handler: handler.updateTask
     events:
